src/Pages/Gallery/Components/expandableCard.module.css
.wrapper {
   position: relative;
   margin-top: 2px;
   left: 50%;
   transform: translateX(-50%);
   width: 320px;
   background-image: url(../Assets/pill-icon.png);
   background-size: cover;
   background-repeat: no-repeat;
   /* image-rendering: initial; */
   border-radius: 60px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   align-content: center;
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 20px;
   margin-left: 0px;
   margin-right: 0px;
   color: white;
   font-size: 3rem;
}

@media screen and (max-width: 992px) {
   .wrapper {
      min-width: 320px;
   }
}

@media screen and (max-width: 768px) {
   .wrapper {
      min-width: 200px;
   }
}

@media screen and (max-width: 576px) {

   .wrapper{
      width: 100px;
      transform: translateX(0%);
      margin-left: -100px;
   }
}

